# Poligraph

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  future_additions.md  mvp_data_model_workflow_design.md  programs_workflow_public_methodology.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/versions/: 0001_initial.py  0002_analysis_communication_sources.py  0003_politician_image_url.py  0004_statement_title_nullable.py  0005_programs_commitments.py  0006_editable_ai_artifacts.py  0007_program_soft_delete.py  0008_mvp_redesign.py  0009_program_multistage_workflow.py  0010_legacy_commitment_defaults.py  0011_program_ai_run_integrity.py  0012_commitment_section_public_index.py  0013_program_contribution_methodology.py  0014_program_analysis_v6.py  0015_importance_weight_sync.py  0016_revert_v6_schema.py
backend/app/: __init__.py  cli.py  config.py  dependencies.py  main.py  resources.json  resources.py  security.py
backend/app/models/: __init__.py  ai_analysis.py  appeal.py  audit_log.py  case.py  commitment.py  cross_links.py  evidence.py  imports.py  media_asset.py  moderator.py  party_membership.py  political_party.py  politician.py  program.py  revision.py  statement.py  statement_claim.py
backend/app/schemas/: ai_analysis.py  common.py  dashboard.py  moderator.py  political_party.py  politician.py  statement.py
backend/tests/: test_program_ai_workflow_service.py  test_program_analysis_batch_service.py  test_program_analysis_evaluation.py  test_public_program_payloads.py  test_statement_ai_contract.py
(+135 files in other folders)
