[project]
name = "political-ai-filter-backend"
version = "0.1.0"
description = "FastAPI backend for public political statement analysis and internal moderation."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "itsdangerous>=2.2",
  "jinja2>=3.1",
  "passlib[argon2]>=1.7",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.5",
  "python-multipart>=0.0.12",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["ruff>=0.6"]

[tool.ruff]
line-length = 140
target-version = "py312"
